jmmtc: tuning the virtual machine